<resources>
    <string name="app_name">Betterbet</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="email">Email or phone</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="signuppwd_error_message">Please Enter a Password</string>

    <string name="signupmail_error_message">Please enter a valid Email</string>
    <string name="signupage_error_message">Please enter a valid Age</string>
    <string name="forgot">Forgot?</string>
    <string name="signuppwd_error_title">Password Is Empty</string>

    <string name="signupmail_error_title">Email Is Empty</string>

    <string name="login_error_title">Login Error</string>
    <string name="account">I have an account</string>
    <string name="phonenum">Use phone number</string>
    <string name="info">More info</string>
    <string name="name">Full name</string>
    <string name="loc">Location</string>
    <string name="tc">I have read Terms of conditions and privacy</string>

    <string name="facebook_app_id">864339143772536</string>
    <string name="fb_login_protocol_scheme">fb864339143772536</string>

    <!-- Me page -->
    <string name="event">Events</string>
    <string name="group">Groups</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="inbox">Inbox</string>
    <string name="title_activity_mepage_new">mepage_new</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabpages">tabpages</string>
    <string name="title_activity_tabpage">tabpage</string>
    <!--


    <string name="t&c">I have read Terms of conditions & privacy</string>

-->


</resources>
